maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:6: error: Unit does not take parameters
  while (!estSurBiscuit()) {keepHandOnSideWall()}; prendBiscuit()
                                              ^