maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
def keepHandOnSideWall = {while(estFaceMur()) {gauche()}; avance()}

override def run() { 
  
  
  while (!estSurBiscuit()) {keepHandOnSideWall()}; prendBiscuit()
}